--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -6,12 +6,22 @@
     android:layout_height="match_parent"
     tools:context="com.emonnemo.whereismymoney.Activity.AddTransactionActivity">
 
+    <EditText
+        android:id="@+id/add_transaction_date_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Date"
+        android:imeOptions="flagNoExtractUi"
+        tools:ignore="TextFields"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/add_transaction_amount_input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/add_transaction_date_input">
 
         <EditText
             android:id="@+id/add_transaction_amount_input"
