--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,4 +8,129 @@
     tools:context="com.emonnemo.whereismymoney.Activity.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <TextView
+        android:id="@+id/month_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/hint_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/swipe_month_hint"
+        android:textColor="#888"
+        app:layout_constraintTop_toBottomOf="@id/month_name"/>
+
+    <com.github.sundeepk.compactcalendarview.CompactCalendarView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/compactcalendar_view"
+        android:layout_width="match_parent"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:layout_height="200dp"
+        app:compactCalendarTargetHeight="200dp"
+        app:compactCalendarTextSize="12sp"
+        app:compactCalendarBackgroundColor="#fff"
+        app:compactCalendarTextColor="#000"
+        app:compactCalendarCurrentSelectedDayBackgroundColor="#bbb"
+        app:compactCalendarCurrentDayBackgroundColor="#ddd"
+        app:layout_constraintTop_toBottomOf="@id/hint_text"
+        app:compactCalendarCurrentDayIndicatorStyle="no_fill_large_indicator"
+        />
+
+    <TextView
+        android:id="@+id/current_day"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="start"
+        android:layout_marginStart="5dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/compactcalendar_view"/>
+
+    <TextView
+        android:id="@+id/yellow_dot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:text="@string/dot"
+        android:textColor="#ffcc00"
+        app:layout_constraintEnd_toStartOf="@+id/yellow_text"
+        app:layout_constraintTop_toBottomOf="@id/compactcalendar_view"/>
+    <TextView
+        android:id="@+id/yellow_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:text="@string/yellow_hint"
+        app:layout_constraintEnd_toStartOf="@id/orange_dot"
+        app:layout_constraintTop_toBottomOf="@id/compactcalendar_view"/>
+
+    <TextView
+        android:id="@+id/orange_dot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:text="@string/dot"
+        android:textColor="#ff823a"
+        app:layout_constraintEnd_toStartOf="@id/orange_text"
+        app:layout_constraintTop_toBottomOf="@id/compactcalendar_view"/>
+    <TextView
+        android:id="@+id/orange_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:layout_marginEnd="5dp"
+        android:text="@string/orange_hint"
+        app:layout_constraintEnd_toStartOf="@id/red_dot"
+        app:layout_constraintTop_toBottomOf="@id/compactcalendar_view"/>
+
+    <TextView
+        android:id="@+id/red_dot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:text="@string/dot"
+        android:textColor="#ff0000"
+        app:layout_constraintEnd_toStartOf="@id/red_text"
+        app:layout_constraintTop_toBottomOf="@id/compactcalendar_view"/>
+    <TextView
+        android:id="@+id/red_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:layout_marginEnd="5dp"
+        android:text="@string/red_hint"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/compactcalendar_view"/>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayoutWrapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="260dp"
+        app:layout_constraintTop_toBottomOf="@id/hint_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/transaction_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fadeScrollbars="false"
+            android:scrollbars="vertical"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+
+
 </android.support.constraint.ConstraintLayout>
